feat: add sections

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
 }
@@ -30,6 +32,6 @@ h2 {
 
 header {
     justify-content: center;
-    text-align: center;
+    text-justify: center;
 }
 
